# race_gazebo_ros

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
race_gazebo_ros/: race_director.py  running_track.sdf
src/race_gazebo_ros/: README.md  package.xml  setup.cfg  setup.py
src/race_gazebo_ros/config/: bridges_config.yaml  gui.config
src/race_gazebo_ros/launch/: race_gazebo_ros.launch.py
src/race_gazebo_ros/race_gazebo_ros/: race_director.py  start_node.py
src/race_gazebo_ros/worlds/: running_track.sdf
